<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Loginproving</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="forgive">忘记密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="registersetting">注册设置</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm">确认</string>
    <string name="proving">验证</string>
    <string name="phonenumber">请输入您预留的手机号码</string>
    <string name="yuliu">预留手机号码</string>
    <string name="rememberpassword">记住密码</string>
    <string name="zhuxiao">注销</string>

</resources>