<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/password"
        android:layout_centerVertical="true"
        android:background="@drawable/shape"
        android:text="@string/login" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginbutton"
        android:layout_alignLeft="@+id/username"
        android:layout_alignRight="@+id/username"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPassword" 
        android:background="@drawable/edit_bg">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="" 
        android:background="@drawable/edit_bg"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/action_settings"
        android:src="@drawable/loginicon" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginbutton"
        android:layout_marginTop="18dp"
        android:layout_toLeftOf="@+id/button2"
        android:background="@android:color/transparent"
        android:text="@string/forgive"
        android:textSize="15sp"
        android:textColor="#33CCFF" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignRight="@+id/loginbutton"
        android:background="@android:color/transparent"
        android:text="@string/register"
        android:textSize="15sp"
        android:textColor="#33CCFF"  />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/button3"
        android:background="@android:color/transparent"
        android:text="@string/rememberpassword"
        android:textColor="#33CCFF"
        android:textSize="15sp" />

</RelativeLayout>